--- a/public/css/main.css
+++ b/public/css/main.css
@@ -611,12 +611,29 @@ Ensure the default browser behavior of the `hidden` attribute.
   left: -0.25rem;
 }
 
+.inset-x-0 {
+  left: 0px;
+  right: 0px;
+}
+
 .right-3 {
   right: 0.75rem;
 }
 
 .top-\[50\%\] {
   top: 50%;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-4 {
+  bottom: 1rem;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
 }
 
 .isolate {
@@ -1667,6 +1684,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-neon-blue\/60 {
+  background-color: rgb(22 170 252 / 0.6);
+}
+
 .bg-\[url\(\'\.\.\.\'\)\] {
   background-image: url('...');
 }
@@ -1681,6 +1702,15 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bg-\[url\(\"\.\.\.\"\)\2c url\(\"\.\.\.\"\)\] {
   background-image: url("..."),url("...");
+}
+
+.from-neon-pink {
+  --tw-gradient-from: #A709D0;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(167 9 208 / 0));
+}
+
+.to-neon-blue {
+  --tw-gradient-to: #16AAFC;
 }
 
 .decoration-slice {
@@ -1883,6 +1913,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   vertical-align: super;
 }
 
+.font-sans {
+  font-family: Montserrat, sans-serif;
+}
+
 .font-\[\'some_font\'\2c sans-serif\] {
   font-family: 'some font',sans-serif;
 }
@@ -1891,18 +1925,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-family: "some font",sans-serif;
 }
 
-.font-sans {
-  font-family: Montserrat, sans-serif;
+.text-\[25px\] {
+  font-size: 25px;
 }
 
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 
 .text-lg {
@@ -1910,30 +1939,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
-.text-xl {
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-
-.text-\[24px\] {
-  font-size: 24px;
-}
-
-.text-\[22px\] {
-  font-size: 22px;
-}
-
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .font-bold {
   font-weight: 700;
-}
-
-.font-medium {
-  font-weight: 500;
 }
 
 .font-normal {
@@ -2008,62 +2015,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction);
 }
 
-.leading-\[1\.2\] {
-  line-height: 1.2;
-}
-
-.leading-\[1\.3\] {
-  line-height: 1.3;
-}
-
-.leading-\[1\.4\] {
-  line-height: 1.4;
-}
-
-.leading-\[1\.5\] {
-  line-height: 1.5;
-}
-
-.leading-\[1\.8\] {
-  line-height: 1.8;
-}
-
-.leading-\[2\] {
-  line-height: 2;
-}
-
-.leading-\[3\] {
-  line-height: 3;
-}
-
-.leading-relaxed {
-  line-height: 1.625;
-}
-
-.leading-10 {
-  line-height: 2.5rem;
-}
-
-.leading-\[5\] {
-  line-height: 5;
-}
-
-.leading-none {
-  line-height: 1;
-}
-
-.leading-\[40px\] {
-  line-height: 40px;
-}
-
-.leading-\[2\.5\] {
-  line-height: 2.5;
-}
-
-.leading-\[10\] {
-  line-height: 10;
-}
-
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
@@ -2092,6 +2043,26 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-gray-100 {
   --tw-text-opacity: 1;
   color: rgb(243 244 246 / var(--tw-text-opacity));
+}
+
+.text-neon-pink\/50 {
+  color: rgb(167 9 208 / 0.5);
+}
+
+.text-neon-blue\/70 {
+  color: rgb(22 170 252 / 0.7);
+}
+
+.text-neon-blue\/50 {
+  color: rgb(22 170 252 / 0.5);
+}
+
+.text-neon-pink\/70 {
+  color: rgb(167 9 208 / 0.7);
+}
+
+.text-neon-blue\/60 {
+  color: rgb(22 170 252 / 0.6);
 }
 
 .underline {
@@ -2516,12 +2487,41 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 768px) {
+  .md\:inset-y-0 {
+    top: 0px;
+    bottom: 0px;
+  }
+
+  .md\:right-0 {
+    right: 0px;
+  }
+
+  .md\:right-3 {
+    right: 0.75rem;
+  }
+
+  .md\:right-5 {
+    right: 1.25rem;
+  }
+
   .md\:order-last {
     order: 9999;
   }
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:flex-col {
+    flex-direction: column;
+  }
+
+  .md\:items-end {
+    align-items: flex-end;
+  }
+
+  .md\:items-center {
+    align-items: center;
   }
 
   .md\:gap-5 {
@@ -2542,68 +2542,19 @@ Ensure the default browser behavior of the `hidden` attribute.
     padding-right: 1.25rem;
   }
 
-  .md\:py-4 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-  }
-
   .md\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
   }
 
-  .md\:pt-4 {
-    padding-top: 1rem;
-  }
-
-  .md\:text-3xl {
-    font-size: 1.875rem;
-    line-height: 2.25rem;
-  }
-
-  .md\:text-\[43px\] {
-    font-size: 43px;
-  }
-
-  .md\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
-  }
-
-  .md\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
-  .md\:text-\[1\.7rem\] {
-    font-size: 1.7rem;
-  }
-
-  .md\:text-\[1\.8rem\] {
-    font-size: 1.8rem;
-  }
-
-  .md\:text-\[1\.85rem\] {
-    font-size: 1.85rem;
-  }
-
-  .md\:text-\[1\.87rem\] {
-    font-size: 1.87rem;
-  }
-
-  .md\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
-
-  .md\:text-5xl {
-    font-size: 3rem;
-    line-height: 1;
   }
 
   .md\:font-medium {
